--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,8 @@ spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 spring.sql.init.continue-on-error=true
 spring.sql.init.encoding=UTF-8
+
+# Erro
+logging.level.org.springframework.security=debug
+server.error.include-exception=true
+server.error.include-message=always
