CORS e habilitando SSL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,8 @@ spring.sql.init.encoding=UTF-8
 logging.level.org.springframework.security=debug
 server.error.include-exception=true
 server.error.include-message=always
+
+# SSL/TLS
+server.ssl.key-store=classpath:cert.p12
+server.ssl.key-store-password=webacademy
+server.ssl.key-store-type=PKCS12
