--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,8 @@ server.error.include-message=always
 server.ssl.key-store=classpath:cert.p12
 server.ssl.key-store-password=webacademy
 server.ssl.key-store-type=PKCS12
+
+# Formato Data/Hora
+spring.mvc.format.date=iso
+spring.mvc.format.date-time=iso
+spring.mvc.format.time=iso
